--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body>
       <div class="container">
-        <h1 class="center-align thin">Whatever Happened to the Twelve Apostles?</h1>
+        <h1 class="center-align thin">What Happened to the Twelve Apostles?</h1>
         <!-- <center>
         <div class="row">
           <div class="col s6">
@@ -30,13 +30,15 @@
         </div>
         <center> -->
         <div id="map"></div>
+        <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <p>Source: <a href="https://www.christianity.com/church/church-history/timeline/1-300/whatever-happened-to-the-twelve-apostles-11629558.html">https://www.christianity.com/church/church-history/timeline/1-300/whatever-happened-to-the-twelve-apostles-11629558.html </a></p>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
+      
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
@@ -48,11 +50,11 @@
           {coordinates:{lat: 62.108174, lng: 92.124379}, title: 'Andrew', description: 'Christians there claim him as the first to bring the gospel to their land. He also preached in Asia Minor, modern-day Turkey, and in Greece, where he is said to have been crucified.'},
           {coordinates:{lat: 39.073851, lng: 22.340801}, title: 'Andrew', description: 'Christians there claim him as the first to bring the gospel to their land. He also preached in Asia Minor, modern-day Turkey, and in Greece, where he is said to have been crucified.'},
           {coordinates:{lat: 34.938545, lng: 38.527526}, title: 'Thomas', description: 'was probably most active in the area east of Syria. Tradition has him preaching as far east as India, where the ancient Marthoma Christians revere him as their founder. They claim that he died there when pierced through with the spears of four soldiers.'},
-          {coordinates:{lat: 22.386900, lng: 78.847906}, title: 'Thomas', description: 'was probably most active in the area east of Syria. Tradition has him preaching as far east as India, where the ancient Marthoma Christians revere him as their founder. They claim that he died there when pierced through with the spears of four soldiers.'},
+          {coordinates:{lat: 22.386900, lng: 78.847906}, title: 'Thomas I', description: 'was probably most active in the area east of Syria. Tradition has him preaching as far east as India, where the ancient Marthoma Christians revere him as their founder. They claim that he died there when pierced through with the spears of four soldiers.'},
           {coordinates:{lat: 36.872480, lng: 10.315557}, title: 'Philip', description: 'possibly had a powerful ministry in Carthage in North Africa and then in Asia Minor, where he converted the wife of a Roman proconsul. In retaliation the proconsul had Philip arrested and cruelly put to death.'},
           {coordinates:{lat: 32.159962, lng: 54.074407}, title: 'Matthew', description: 'the tax collector and writer of a Gospel ministered in Persia and Ethiopia. Some of the oldest reports say he was not martyred, while others say he was stabbed to death in Ethiopia.'},
           {coordinates:{lat: 8.491767, lng: 39.603880}, title: 'Matthew', description: 'the tax collector and writer of a Gospel ministered in Persia and Ethiopia. Some of the oldest reports say he was not martyred, while others say he was stabbed to death in Ethiopia.'},
-          {coordinates:{lat: 21.571883, lng: 77.002203}, title: 'Bartholomew', description: 'had widespread missionary travels attributed to him by tradition: to India with Thomas, back to Armenia, and also to Ethiopia and Southern Arabia. There are various accounts of how he met his death as a martyr for the gospel.'},
+          {coordinates:{lat: 21.571883, lng: 77.002203}, title: 'Bartholomew I', description: 'had widespread missionary travels attributed to him by tradition: to India with Thomas, back to Armenia, and also to Ethiopia and Southern Arabia. There are various accounts of how he met his death as a martyr for the gospel.'},
           {coordinates:{lat: 40.446702, lng: 44.655643}, title: 'Bartholomew', description: 'had widespread missionary travels attributed to him by tradition: to India with Thomas, back to Armenia, and also to Ethiopia and Southern Arabia. There are various accounts of how he met his death as a martyr for the gospel.'},
           {coordinates:{lat: 8.143903, lng: 41.976927}, title: 'Bartholomew', description: 'had widespread missionary travels attributed to him by tradition: to India with Thomas, back to Armenia, and also to Ethiopia and Southern Arabia. There are various accounts of how he met his death as a martyr for the gospel.'},
           {coordinates:{lat: 20.293080, lng: 49.389613}, title: 'Bartholomew', description: 'had widespread missionary travels attributed to him by tradition: to India with Thomas, back to Armenia, and also to Ethiopia and Southern Arabia. There are various accounts of how he met his death as a martyr for the gospel.'},
@@ -113,20 +115,96 @@
           marker[index].addListener('click', function() {
             infowindow[index].open(map, marker[index]);
           });
-          // if(index<datapoints.length-1)
-          // {
-          //   line[index] = new google.maps.Polyline({
-          //     path: [datapoints[index].coordinates, datapoints[index+1].coordinates],
-          //     strokeOpacity: 0,
-          //     icons: [{
-          //       icon: lineSymbol,
-          //       offset: '0',
-          //       repeat: '20px'
-          //     }],
-          //     map: map
-          //   });
-          // }
+          if(index==4 || index==6 || index==9 || index==11 || index==12 || index==13 || index==18)
+          {
+            //pass;
+          }
+          else{
+            line[index] = new google.maps.Polyline({
+              path: [datapoints[0].coordinates, datapoints[index].coordinates],
+              strokeOpacity: 0,
+              icons: [{
+                icon: lineSymbol,
+                offset: '0',
+                repeat: '20px'
+              }],
+              map: map
+            });
+
+          }
         });
+        // link the extensions 
+        line[19] = new google.maps.Polyline({
+              path: [datapoints[3].coordinates, datapoints[4].coordinates],
+              strokeOpacity: 0,
+              icons: [{
+                icon: lineSymbol,
+                offset: '0',
+                repeat: '20px'
+              }],
+              map: map
+            });
+        line[20] = new google.maps.Polyline({
+          path: [datapoints[5].coordinates, datapoints[6].coordinates],
+          strokeOpacity: 0,
+          icons: [{
+            icon: lineSymbol,
+            offset: '0',
+            repeat: '20px'
+          }],
+          map: map
+        });
+        line[21] = new google.maps.Polyline({
+          path: [datapoints[8].coordinates, datapoints[9].coordinates],
+          strokeOpacity: 0,
+          icons: [{
+            icon: lineSymbol,
+            offset: '0',
+            repeat: '20px'
+          }],
+          map: map
+        });
+        line[22] = new google.maps.Polyline({
+          path: [datapoints[10].coordinates, datapoints[11].coordinates],
+          strokeOpacity: 0,
+          icons: [{
+            icon: lineSymbol,
+            offset: '0',
+            repeat: '20px'
+          }],
+          map: map
+        });
+        line[23] = new google.maps.Polyline({
+          path: [datapoints[11].coordinates, datapoints[12].coordinates],
+          strokeOpacity: 0,
+          icons: [{
+            icon: lineSymbol,
+            offset: '0',
+            repeat: '20px'
+          }],
+          map: map
+        });
+        line[24] = new google.maps.Polyline({
+          path: [datapoints[12].coordinates, datapoints[13].coordinates],
+          strokeOpacity: 0,
+          icons: [{
+            icon: lineSymbol,
+            offset: '0',
+            repeat: '20px'
+          }],
+          map: map
+        });
+        line[25] = new google.maps.Polyline({
+          path: [datapoints[17].coordinates, datapoints[18].coordinates],
+          strokeOpacity: 0,
+          icons: [{
+            icon: lineSymbol,
+            offset: '0',
+            repeat: '20px'
+          }],
+          map: map
+        });
+
       }
       function nxtlocation() {
         if(pointer<datapoints.length-1)
