--- a/index.html
+++ b/index.html
@@ -120,90 +120,90 @@
             //pass;
           }
           else{
-            line[index] = new google.maps.Polyline({
-              path: [datapoints[0].coordinates, datapoints[index].coordinates],
-              strokeOpacity: 0,
-              icons: [{
-                icon: lineSymbol,
-                offset: '0',
-                repeat: '20px'
-              }],
-              map: map
-            });
+            // line[index] = new google.maps.Polyline({
+            //   path: [datapoints[0].coordinates, datapoints[index].coordinates],
+            //   strokeOpacity: 0,
+            //   icons: [{
+            //     icon: lineSymbol,
+            //     offset: '0',
+            //     repeat: '20px'
+            //   }],
+            //   map: map
+            // });
 
           }
         });
         // link the extensions 
-        line[19] = new google.maps.Polyline({
-              path: [datapoints[3].coordinates, datapoints[4].coordinates],
-              strokeOpacity: 0,
-              icons: [{
-                icon: lineSymbol,
-                offset: '0',
-                repeat: '20px'
-              }],
-              map: map
-            });
-        line[20] = new google.maps.Polyline({
-          path: [datapoints[5].coordinates, datapoints[6].coordinates],
-          strokeOpacity: 0,
-          icons: [{
-            icon: lineSymbol,
-            offset: '0',
-            repeat: '20px'
-          }],
-          map: map
-        });
-        line[21] = new google.maps.Polyline({
-          path: [datapoints[8].coordinates, datapoints[9].coordinates],
-          strokeOpacity: 0,
-          icons: [{
-            icon: lineSymbol,
-            offset: '0',
-            repeat: '20px'
-          }],
-          map: map
-        });
-        line[22] = new google.maps.Polyline({
-          path: [datapoints[10].coordinates, datapoints[11].coordinates],
-          strokeOpacity: 0,
-          icons: [{
-            icon: lineSymbol,
-            offset: '0',
-            repeat: '20px'
-          }],
-          map: map
-        });
-        line[23] = new google.maps.Polyline({
-          path: [datapoints[11].coordinates, datapoints[12].coordinates],
-          strokeOpacity: 0,
-          icons: [{
-            icon: lineSymbol,
-            offset: '0',
-            repeat: '20px'
-          }],
-          map: map
-        });
-        line[24] = new google.maps.Polyline({
-          path: [datapoints[12].coordinates, datapoints[13].coordinates],
-          strokeOpacity: 0,
-          icons: [{
-            icon: lineSymbol,
-            offset: '0',
-            repeat: '20px'
-          }],
-          map: map
-        });
-        line[25] = new google.maps.Polyline({
-          path: [datapoints[17].coordinates, datapoints[18].coordinates],
-          strokeOpacity: 0,
-          icons: [{
-            icon: lineSymbol,
-            offset: '0',
-            repeat: '20px'
-          }],
-          map: map
-        });
+        // line[19] = new google.maps.Polyline({
+        //       path: [datapoints[3].coordinates, datapoints[4].coordinates],
+        //       strokeOpacity: 0,
+        //       icons: [{
+        //         icon: lineSymbol,
+        //         offset: '0',
+        //         repeat: '20px'
+        //       }],
+        //       map: map
+        //     });
+        // line[20] = new google.maps.Polyline({
+        //   path: [datapoints[5].coordinates, datapoints[6].coordinates],
+        //   strokeOpacity: 0,
+        //   icons: [{
+        //     icon: lineSymbol,
+        //     offset: '0',
+        //     repeat: '20px'
+        //   }],
+        //   map: map
+        // });
+        // line[21] = new google.maps.Polyline({
+        //   path: [datapoints[8].coordinates, datapoints[9].coordinates],
+        //   strokeOpacity: 0,
+        //   icons: [{
+        //     icon: lineSymbol,
+        //     offset: '0',
+        //     repeat: '20px'
+        //   }],
+        //   map: map
+        // });
+        // line[22] = new google.maps.Polyline({
+        //   path: [datapoints[10].coordinates, datapoints[11].coordinates],
+        //   strokeOpacity: 0,
+        //   icons: [{
+        //     icon: lineSymbol,
+        //     offset: '0',
+        //     repeat: '20px'
+        //   }],
+        //   map: map
+        // });
+        // line[23] = new google.maps.Polyline({
+        //   path: [datapoints[11].coordinates, datapoints[12].coordinates],
+        //   strokeOpacity: 0,
+        //   icons: [{
+        //     icon: lineSymbol,
+        //     offset: '0',
+        //     repeat: '20px'
+        //   }],
+        //   map: map
+        // });
+        // line[24] = new google.maps.Polyline({
+        //   path: [datapoints[12].coordinates, datapoints[13].coordinates],
+        //   strokeOpacity: 0,
+        //   icons: [{
+        //     icon: lineSymbol,
+        //     offset: '0',
+        //     repeat: '20px'
+        //   }],
+        //   map: map
+        // });
+        // line[25] = new google.maps.Polyline({
+        //   path: [datapoints[17].coordinates, datapoints[18].coordinates],
+        //   strokeOpacity: 0,
+        //   icons: [{
+        //     icon: lineSymbol,
+        //     offset: '0',
+        //     repeat: '20px'
+        //   }],
+        //   map: map
+        // });
 
       }
       function nxtlocation() {
